# hsr_multimodal_interaction_stack

./: .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt
docs/: _config.yml  abstract.md  architecture.md  demonstrations.md  features.md  index.md  motivation.md  setup.md  usage.md
docs/architecture/: README.md
hsr_hri/: README.md  model_crnn.py  package.xml  setup.cfg  setup.py
hsr_hri/hsr_hri/: llm_convo.py
hsr_hri/resource/: hsr_hri
scripts/: llm_convo.py
