<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsr_hri</name>
  <version>0.0.1</version>
  <description>HSR HRI: ChatGPT-driven conversation and gestures</description>
  <maintainer email="vidya@todo.todo">vidya</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime dependencies for your node -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- (Optional) keep your test deps -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

